Add test for hasmember on RepositoryCopy.externalids